compiler/testData/diagnostics/tests/enum/inheritFromEnumEntry.kt
enum class E {
    ENTRY
}

class A : <!SINGLETON_IN_SUPERTYPE!>E.ENTRY<!>
